# Maryem

./: README.md
Arduino/: Current_Micro1_JSON.ino  Micro2_Accelerometre_JSON.ino
Buffered_sp_plugin/: CMakeLists.txt  acquisitor.cpp  acquisitor.hpp  buffered_sp.cpp  serial_acq.hpp
Filter_FFT_Acceleration/: CMakeLists.txt  accel_fft.cpp
Filter_FFT_Sound/: CMakeLists.txt  sound_fft.cpp
MongoDB_Data/: plot_accelfft_from_mongo.py  plot_current_from_mongo.py  plot_sound_from_mongo.py
Overpower_alerte_plugin/: CMakeLists.txt  email_alert.py  gui_overpower_alert.py  overpower_email.cpp
Sink_FFT_Acceleration/: accel_fft_alarm_gui.cpp  gui_line_fft.py
Sink_FFT_Sound/: CMakeLists.txt  gui_sound_fft.py  sound_fft_alarm_gui.cpp
Web_Dashboard_plugin/: CMakeLists.txt  web_dashboard.cpp
